syntax = "proto3";
package pb;

option go_package = "./game;game";

message Void {
}

message Package {
	string name = 1;		// 消息名称，用于寻找回调函数
	uint32 sessionId = 2;
	int32 errCode = 3;
	bytes data = 4;
	//node timestamp 之类的
}

message EnterSceneReq {
  int32 sceneId = 1;
}

message LeaveSceneReq {
  int32 sceneId = 1;
}

message MoveReq {
	float x = 1;
	float y = 2;
	float z = 3;
}
message MoveResp {
	float x = 1;
	float y = 2;
	float z = 3;
}

// c2s
service GameC2S {
  rpc EnterScene (EnterSceneReq) returns (Void);
  rpc LeaveScene (LeaveSceneReq) returns (Void);
  rpc DoMovement (MoveReq) returns (MoveResp);
}

